# victory-suite

./: .gitignore  Cargo.toml  LICENSE  README  README.md
.github/workflows/: rust-lib.yaml
admin/: Cargo.toml  build.rs
admin/admin-proto/: pubsub_admin.proto
admin/src/: admin_server.rs
admin/src/services/: pubsub.rs
admin/victory-broker-admin/: package.json
admin/victory-broker-admin/admin-proto-gen/: Pubsub_adminServiceClientPb.ts  package.json  pubsub_admin_pb.d.ts  pubsub_admin_pb.js
admin/victory-broker-admin/src/: App.jsx
admin/victory-broker-admin/src/components/channels/: index.jsx
admin/victory-broker-admin/src/components/nav/: index.jsx  nav.module.css
benches/: serde.rs  serde_tracy.rs
datastore/: Cargo.toml
datastore/src/: lib.rs
datastore/src/buckets/: mod.rs
datastore/src/database/: mod.rs
datastore/src/datapoints/: mod.rs
datastore/src/primitives/: blob.rs  integer.rs  mod.rs  timestamp.rs
datastore/src/primitives/database/: mod.rs
datastore/src/time/: duration.rs  instant.rs  timecode.rs
datastore/src/topics/: mod.rs
launcher/: Cargo.toml
launcher/src/: main.rs
pubsub/: Cargo.toml
pubsub/src/: lib.rs  main.rs
pubsub/src/adapters/: mock.rs  mod.rs
pubsub/src/adapters/tcp/: tcp_client.rs  tcp_server.rs
pubsub/src/channel/: mod.rs
pubsub/src/client/: mod.rs
pubsub/src/messages/: mod.rs  publish.rs  subscribe.rs  update.rs
pubsub/src/node/: mod.rs  sub_callback.rs
pubsub/src/server/: config.rs  mod.rs
src/: lib.rs  main.rs  mock_system.rs  test_util.rs
src/buckets/: mod.rs
src/database/: mod.rs
src/datapoints/: mod.rs
src/primitives/: blob.rs  bool.rs  float.rs  integer.rs  mod.rs  string.rs
src/primitives/serde/: deserializer.rs  error.rs  mod.rs  serialize.rs
src/system/: mod.rs  runner.rs
src/test_systems/: mod.rs  time_scale.rs
src/test_systems/big_state/: big_sub.rs  mod.rs
src/time/: duration.rs  instant.rs  mod.rs
src/topics/: mod.rs
victory-broker/: Cargo.toml
victory-broker/.github/workflows/: rust.yaml
victory-broker/admin/: Cargo.toml
victory-broker/admin/src/: admin_server.rs  lib.rs  proto.rs
victory-broker/admin/victory-broker-admin/: package.json  vite.config.js
victory-broker/admin/victory-broker-admin/admin-proto-gen/: Pubsub_adminServiceClientPb.ts  pubsub_admin_pb.d.ts
victory-broker/admin/victory-broker-admin/src/: App.jsx
victory-broker/admin/victory-broker-admin/src/components/adapters/: index.jsx
victory-broker/admin/victory-broker-admin/src/components/channels/: index.jsx
victory-broker/launcher/: Cargo.toml
victory-broker/launcher/src/: main.rs
victory-broker/pubsub/: Cargo.toml
victory-broker/pubsub/src/: lib.rs
victory-broker/pubsub/src/adapters/: mock.rs  mod.rs
victory-broker/pubsub/src/adapters/tcp/: mod.rs  packet.rs  tcp_client.rs
victory-broker/pubsub/src/client/: mod.rs
victory-broker/pubsub/src/messages/: mod.rs  subscribe.rs
victory-broker/pubsub/src/server/: config.rs  mod.rs
victory-broker/src/: lib.rs
victory-broker/src/adapters/: mock.rs  mod.rs
victory-broker/src/adapters/channel/: mod.rs
victory-broker/src/adapters/tcp/: connection.rs  message.rs  mod.rs  packet.rs  tcp_client.rs  tcp_server.rs
victory-broker/src/admin/victory-broker-admin/admin-proto-gen/: pubsub_admin_pb.js
victory-broker/src/admin/victory-broker-admin/src/components/nav/: index.jsx
victory-broker/src/big_state/: mod.rs
victory-broker/src/broker/: mod.rs  time.rs
victory-broker/src/channel/: mod.rs
victory-broker/src/commander/: linear.rs  mock.rs  mod.rs
victory-broker/src/messages/: mod.rs  publish.rs  subscribe.rs  update.rs
victory-broker/src/node/: bucket_listener.rs  info.rs  mod.rs  sub_callback.rs
victory-broker/src/server/: config.rs  mod.rs
victory-broker/src/task/: config.rs  mod.rs  state.rs  subscription.rs  trigger.rs
victory-broker/src/task/example/: mod.rs  task_math.rs  task_printer.rs  task_ticker.rs
victory-commander/: Cargo.toml  README.md
victory-commander/src/: lib.rs  main.rs
victory-commander/src/system/: mod.rs  runner.rs
victory-commander/src/test_systems/: mod.rs  time_scale.rs
victory-commander/src/test_systems/big_state/: big_pub.rs  big_sub.rs  mod.rs
victory-data-store/: Cargo.toml  build.rs
victory-data-store/benches/: serde.rs  serde_tracy.rs
victory-data-store/src/: lib.rs  main.rs  test_util.rs
victory-data-store/src/buckets/: listener.rs  mod.rs
victory-data-store/src/database/: listener.rs  mod.rs  retention.rs  view.rs
victory-data-store/src/datapoints/: mod.rs
victory-data-store/src/primitives/: blob.rs  bool.rs  integer.rs  mod.rs
victory-data-store/src/primitives/database/: mod.rs
victory-data-store/src/primitives/serde/: deserializer.rs  error.rs  serialize.rs
victory-data-store/src/sync/: config.rs  mod.rs  packet.rs  subscription.rs
victory-data-store/src/sync/adapters/: mock.rs  mod.rs
victory-data-store/src/sync/adapters/tcp/: connection.rs  mod.rs  tcp_client.rs  tcp_server.rs
victory-data-store/src/sync/adapters/tonic/: mod.rs  sync.proto
victory-data-store/src/topics/: mod.rs
victory-pubsub/: Cargo.toml
victory-time/: Cargo.toml
victory-wtf/: Cargo.toml  README.md
victory-wtf/src/: lib.rs  timecode.rs  timepoint.rs
