[package]
name = "victory-data-store"
version = "0.1.4"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.86"
arrow = "52.2.0"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"
victory-time-rs = { git = "https://github.com/victoryforphil/victory-time", version = "0.1.1" }
env_logger = "0.11.5"
memuse = "0.2.1"


[dependencies.tracy]
package = "tracy_full"
version = "1.10.0"
features = ["enable"]
