[package]
name = "victory-data-store"
version = "0.1.12"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"] }
anyhow = "1.0.86"
arrow = "52.2.0"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"
victory-time-rs = { git = "https://github.com/victoryforphil/victory-time", version = "0.1.1" }
env_logger = "0.11.5"
memuse = "0.2.1"
tracing-subscriber = "0.3.18"

tracing-tracy = { version = "0.11.3", features = ["callstack-inlines", "code-transfer", "delayed-init", "sampling", "system-tracing"] }
lazy_static = "1.5.0"


[dev-dependencies]
sensible-env-logger = "0.3"
divan = "0.1.14"

[dependencies.tracy]
package = "tracy_full"
version = "1.10.0"
features = ["enable"]


[[bench]]
name = "serde"
harness = false

[[bench]]
name = "serde_tracy"
harness = false
