[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcp_server"
path = "bin/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "bin/tcp_client.rs"


[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"
datastore = { path = "../datastore" }
env_logger = "0.5.0"
admin = { path = "../admin" }
pubsub = { path = "../pubsub" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
