[package]
name = "victory-broker"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.86"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"

pretty_env_logger = "0.5.0"

tokio = { version = "1.0", features = ["macros", "sync", "time", "net", "rt-multi-thread", "rt"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive", "rc"] }
bincode = "1.3.3"
victory-data-store = { path = "../victory-data-store" }
victory-wtf = { path = "../victory-wtf" }
test-log = "0.2.16"

[[bin]]
name = "tcp_server"
path = "bin/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "bin/tcp_client.rs"
