[package]
name = "victory-broker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broker_tcp_server"
path = "bin/broker_tcp_server.rs"

[[bin]]
name = "broker_tcp_client"
path = "bin/broker_tcp_client.rs"

[dependencies]

anyhow = "1.0.86"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"

pretty_env_logger = "0.5.0"

tokio = { version = "1.0", features = ["macros", "sync", "time", "net", "rt-multi-thread", "rt"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive", "rc"] }
bincode = "1.3.3"
victory-data-store = { path = "../victory-data-store" }
victory-wtf = { path = "../victory-wtf" }
test-log = "0.2.16"
serde_json = "1.0.132"
test-env-log = "0.2.8"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
rmp-serde = "1.3.0"
rmp = "0.8.14"
