[package]
name = "victory-commander"
version = "0.0.1"
edition = "2021"

[dependencies]
anymap = "0.12.1"
enum_dispatch = "0.3.13"
log = "0.4.22"
pretty_env_logger = "0.5.0"
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0.210", features = ["derive"] }
victory-data-store = { path = "../victory-data-store" }
victory-wtf = { path = "../victory-wtf" }
victory-broker = { path = "../victory-broker" }