[package]
name = "victory-data-store"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "sync_tcp_server"
path = "bin/tcp_server.rs"

[[bin]]
name = "sync_tcp_client"
path = "bin/tcp_client.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"] }
anyhow = "1.0.86"
arrow = "52.2.0"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"
victory-wtf = { path = "../victory-wtf" }
env_logger = "0.11.5"
memuse = "0.2.1"
tracing-subscriber = "0.3.18"

tracing-tracy = { version = "0.11.3", features = ["callstack-inlines", "code-transfer", "delayed-init", "sampling", "system-tracing"] }
lazy_static = "1.5.0"
rand = "0.8.5"

tokio = { version = "*", features = ["full"] }
rmp-serde = "1.3.0"
pretty_env_logger = "0.5.0"
clap = { version = "4.5.20", features = ["derive"] }


[dev-dependencies]
sensible-env-logger = "0.3"
divan = "0.1.14"



[dependencies.tracy]
package = "tracy_full"
version = "1.10.0"
features = ["enable"]


[[bench]]
name = "serde"
harness = false

[[bench]]
name = "serde_tracy"
harness = false
