[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.86"
log = "0.4.22"
thiserror = "1.0.63"
tracing = "0.1.40"

pretty_env_logger = "0.5.0"

tokio = { version = "1.0", features = ["macros", "sync", "time", "net", "rt-multi-thread", "rt"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive", "rc"] }
bincode = "1.3.3"
victory-data-store = { git = "https://github.com/victoryforphil/victory-data-store.git", version = "0.1.12" }
victory-time-rs = { git = "https://github.com/victoryforphil/victory-time.git", version = "0.1.1" }
